--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,5 @@
 {
-  "extends": ["config:base"],
-  "ignorePresets": [":prHourlyLimit2"],
-  "timezone": "Asia/Tokyo",
-  "dependencyDashboard": false,
-  "automerge": true,
-  "branchConcurrentLimit": 0
+  "extends": [
+    "github>book000/templates//renovate/base"
+  ]
 }
